# SeBVel

./: Installation.txt  README.md  core.py  environment.yml  example_Nathan.py  example_large_DEM.py  example_small_DEM.py  pyproj.toml  pyproject.toml  shadow.py  shadow_map.py  utils.py
example/: POA_computation.ipynb  example_Nathan.py  example_large_DEM.py  example_shadow_for_one_date.py  stats_in_stable_areas.py
example/1-mapping_shadows/: compute_rough_dem.py
example/2-compute_seasonal_bias/: Seasonality_Alps_IGE.py  Seasonality_Alps_ITS_LIVE.py
example/3-estimation_of_seasonal_bias_over_glaciers/: interpolation_to_glacier_areas.ipynb
example/shadow_maps/: example_large_DEM.py
example/stats_in_static_areas/: static_areas_ITS_LIVE.py  stats_in_stable_areas.py
src/: environment.yml
src/SErrVel/: core.py  shadow.py
src/SeBVel/: core.py  stats.py  utils.py
